Update gallery with new slider design

--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -2,3 +2,9 @@
 .mat-list .mat-list-item {
     color: hotpink;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
