--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -33,29 +33,51 @@
                     {{album.date}}, {{album.name}}
                 </p>
 
-                <ngu-carousel *ngIf="carouselItems" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems">
-                        <ngu-tile *nguCarouselDef="let item;">
-                            
-                            <div class="tile">
-                                <table>
-                                    <tr>
-                                        <img *ngIf="isMobile" width="250px" src="{{imageBaseUrl + item.imagePath}}">
-                                        <img *ngIf="!isMobile" width="500px" src="{{imageBaseUrl + item.imagePath}}">
-                                    </tr>
+                <ngu-carousel *ngIf="carouselItems && !isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems" style="margin: auto; padding: 100px;">
+                    <div class="item" *nguCarouselDef="let item;">
+                        <div class="tile">
+                            <table>
+                                <tr>
+                                    <img class="bordered" height="500vh" src="{{imageBaseUrl + item.imagePath}}">
+                                </tr>
 
-                                    <tr>
-                                        <p class="center">{{item.description}}</p>
-                                    </tr>
-                                </table>
-                            </div> 
+                                <tr>
+                                    <p class="center">{{item.description}}</p>
+                                </tr>
+                            </table>
+                        </div> 
+                    </div>
 
-                        </ngu-tile>
-                        <button NguCarouselNext class="rightRs">></button>
-                        <button NguCarouselPrev class="leftRs"><</button>
-                        <ul class="myPoint" NguCarouselPoint>
-                          <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-                        </ul>
-                      </ngu-carousel>
+                    <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+                    <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
+                    <ul class="myPoint" NguCarouselPoint>
+                        <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
+                    </ul>
+                </ngu-carousel>
+
+                <ngu-carousel *ngIf="carouselItems && isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems">
+                    <div class="item" *nguCarouselDef="let item;">
+                        <div class="tile">
+                            <table>
+                                <tr>
+                                    <img class="bordered" width="200vw" src="{{imageBaseUrl + item.imagePath}}">
+                                </tr>
+
+                                <tr>
+                                    <p class="center">{{item.description}}</p>
+                                </tr>
+                            </table>
+                        </div> 
+                    </div>
+
+                    <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+                    <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
+                    <ul class="myPoint" NguCarouselPoint>
+                        <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
+                    </ul>
+                </ngu-carousel>
+
+                
 
                 <br>
                 <button style="margin-left: 15px; font-size: 20px;" mat-button class="background-primary" (click)="backFromPhotos()">Zurück zu den Alben</button>
