deactivate donations text

--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -37,9 +37,9 @@
         </p>
         <img class="center" style="width: 25vw;" src="{{imageBaseUrl + donation.imagePath}}" alt="{{donation.donator}}" (click)="back()">
 
-        <p class="normal">
+        <!-- <p class="normal">
             {{donation.description}}
-        </p>
+        </p> -->
 
         <button style="margin-left: 15px; font-size: 20px" mat-button class="background-primary" (click)="back()">Zurück zur Übersicht</button>
 
