Add icon to protected documents

--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -8,7 +8,7 @@
 
 <p *ngFor="let document of documents" class="normal">
     <span *ngIf="document.protected != 0">
-        <a [routerLink]="" (click)="downloadProtectedDocument(document);">{{document.description}}</a>
+        🔐 <a [routerLink]="" (click)="downloadProtectedDocument(document);">{{document.description}}</a>
     </span>
     <span *ngIf="document.protected == 0">
         <a href="{{documentBaseUrl + document.link}}">{{document.description}}</a>
