--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -42,27 +42,43 @@
     <br>
   </p>
 
+
+  <br>
+  <br>
+
   <mat-list fxLayout="column" fxLayout.gt-sm="row">
     <mat-list-item class="listImage" *ngFor="let chef of obmaenner">
-      <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
-      <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
-      <h1 mat-line>{{chef.function}}</h1>
+      <span *ngIf="chef.firstName != 'Dummy'">
+        <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+        <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
+        <h1 mat-line>{{chef.function}}</h1>
+      </span>
     </mat-list-item>
   </mat-list>
+
+  <br>
+  <br>
 
   <mat-list fxLayout="column" fxLayout.gt-sm="row">
     <mat-list-item class="listImage" *ngFor="let chef of kassierer">
-      <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
-      <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
-      <h1 mat-line>{{chef.function}}</h1>
+      <span *ngIf="chef.firstName != 'Dummy'">
+        <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+        <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
+        <h1 mat-line>{{chef.function}}</h1>
+      </span>
     </mat-list-item>
   </mat-list>
 
+  <br>
+  <br>
+
   <mat-list fxLayout="column" fxLayout.gt-sm="row">
     <mat-list-item class="listImage" *ngFor="let chef of schriftfuehrer">
-      <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
-      <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
-      <h1 mat-line>{{chef.function}}</h1>
+      <span *ngIf="chef.firstName != 'Dummy'">
+        <img mat-list-avatar class='img-preview' src="{{imageBaseUrl.concat(chef.imagePath)}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+        <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
+        <h1 mat-line>{{chef.function}}</h1>
+      </span>
     </mat-list-item>
   </mat-list>
 </div>
