Improve about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,27 +9,32 @@
 
   <p class="normal">
     Diese Idee wurde von den beiden auch in die Tat umgesetzt. 
-    Neben den Gründungsmitgliedern schlossen sich einige weitere ehemalige Fußballer dem Verein an und so entstand ein Team aus vielen heimischen Kickern, die ihrem Hobby nachgehen.
+    Neben den Gründungsmitgliedern schlossen sich mittlerweile über 30 weitere Fußballer dem Verein an und so entstand ein Team aus vielen heimischen Kickern, die ihrem Hobby nachgehen.
   </p>
 
   <p class="normal">
-    Im Vereinsnamen befindet sich auch der Name unseres Hauptsponsors, der Firma „Textildruckprofi“ aus Deutschlandsberg. 
-    Seit der Gründung spielt der Verein in der Hobbyliga „Süd-Weststeirercup“ mit. Mittlerweile steht der Verein bei 3 Meistertiteln und einem Vizemeistertitel. Gespielt und trainiert wird im Stadion Stainz.
+    Im Vereinsnamen befindet sich auch der Name unseres Hauptsponsors, der Firma „Textildruckprofi“ aus Stainz. 
+    Seit der Gründung spielt der Verein anfangs in der Hobbyliga „Süd-Weststeirercup“,welchselte dann in den "Grenzlandcup" und spielt seit 2020 in der STT-Meisterschaft mit. Gespielt und trainiert wird im Stadion Stainz.
   </p>
 
-  <div fxFlex="50" fxFlexOffset="10px">
-      <img class="center" src="assets/images/meister.jpg">
-  </div>
+  <p class="normal">
+    Neben dem Fußball veranstaltet der Verein etliche Turniere für jeden, der mit Freunden ein paar lustige Stunden verbringen möchte.
+  </p>
 
   <h2 class="large">Unsere größten Erfolge (Stand Sommer 2018):</h2>
 
   <ul class="small">
     <li><span class="fa fa-dice-three fa-sm"></span> 3x Meister Süd-Weststeirercup (2015, 2016, 2018)</li>
+    <li><span class="fa fa-dice-three fa-sm"></span> 3x Kleinfeldturniersieger Leibnitz (2014, 2015, 2016)</li>
+    <li><span class="fa fa-dice-three fa-sm"></span> 3x Kleinfeld-Jux-Turniersieger Freibad Stainz (2016, 2017, 2018)</li>
     <li><span class="fa fa-dice-two fa-sm"></span> 2x Turniersieger des Hobbyhallenmasters in Leibnitz (2015, 2016)</li>
+    <li><span class="fa fa-dice-two fa-sm"></span> 2x Volleyball und Boccia Eröffnungsturniersieger (2016, 2017)</li>
     <li><span class="fa fa-dice-one fa-sm"></span> 1x Vizemeister Süd-Weststeirercup (2017)</li>
+    <li><span class="fa fa-dice-one fa-sm"></span> 1x Sieger beim "Stainz in Motion AUFLAUF" vor dem Schilcherlauf (2017)</li>
     <li><span class="fa fa-medal fa-sm"></span> Testspielerfolg gegen die Kampfmannschaft des SC Stainz (2015)</li>
     <li><span class="fa fa-archway fa-sm"></span> Testspiel gegen den FC Red Bull Salzburg (2017)</li>
     <li><span class="fa fa-futbol fa-sm"></span> Stammtischcup Finaltag (2018)</li>
+    <li><span class="fa fa-medal fa-sm"></span> Österreichischer Fan Meister (2021)</li>
   </ul>
   
   <br>
@@ -81,4 +86,42 @@
       </span>
     </mat-list-item>
   </mat-list>
+
+  <h2 class="header">Mannschaftsfoto 2021</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2021_Mannschaft.jpg">
+  </div>
+
+  <h2 class="header">Mannschaftsfoto 2020</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2020_Mannschaft.jpg">
+  </div>
+
+  <h2 class="header">Mannschaftsfoto 2018/2019</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2018_2019_Mannschaft.jpg">
+  </div>
+  
+  <h2 class="header">Mannschaftsfoto 2017/2018</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2017_2018_Mannschaft.jpg">
+  </div>
+
+  <h2 class="header">Mannschaftsfoto 2016/2017</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2016_2017_Mannschaft.jpg">
+  </div>
+
+  <h2 class="header">Mannschaftsfoto 2015/2016</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2015_2016_Mannschaft.jpg">
+  </div>
+
+  <h2 class="header">Mannschaftsfoto 2014</h2>
+  <div fxFlex="50" fxFlexOffset="10px">
+    <img class="center" src="assets/images/aboutus/2014_Mannschaft.jpg">
+  </div>
+
 </div>
+
+<br><br>
