--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,95 +2,81 @@
     Galerie
 </h1>
 
-<p class="normal" *ngIf="!selectedSeason">
+<p class="normal center" *ngIf="!selectedAlbum" style="text-align: center;">
     Für unsere Fans haben wir alle HV TDP-Veranstaltungen archiviert. Viel Spaß beim Durchstöbern der offiziellen HV TDP-Galerie.
 </p>
 
-<div *ngIf="!selectedSeason">
-    <div fxLayout="column" fxLayout.gt-sm="row">
-        <mat-list>
-        <mat-list-item *ngFor="let season of seasons">  
-                <a><h1 style="font-size:xx-large;font-weight:bold;" matLine (click)="selectSeason(season)">{{season.season}}</h1></a>
-        </mat-list-item>
-        </mat-list>
-    </div>
-</div>
+<img src="/assets/images/camera.gif" width="20%" *ngIf="!isMobile && !selectedAlbum">
+<img src="/assets/images/camera.gif" width="80%" *ngIf="isMobile && !selectedAlbum">
+
+<div *ngFor="let album of albums">
+    <p class="normalCentered" *ngIf="!selectedAlbum" style="color: hotpink;">
+        <a (click)="selectAlbum(album)">Saison {{album.season}}: {{album.name}} ({{album.date}})</a>
+    </p>
     
-<div *ngFor="let season of seasons">
-    <div *ngIf="selectedSeason == season">
+    <p class="normalCentered" *ngIf="!selectedAlbum">
+        <img *ngIf="isMobile" class="bordered" width="80%" src="{{imageBaseUrl + album.photos[0].imagePath}}" (click)="selectAlbum(album)">
+        <img *ngIf="!isMobile" class="bordered" width="50%" src="{{imageBaseUrl + album.photos[0].imagePath}}" (click)="selectAlbum(album)">
+    </p>
 
-        <p class="large" *ngIf="!selectedAlbum">
-            {{season.season}}
+    <br>
+
+    <span *ngIf="album == selectedAlbum">
+        <p class="normalCentered">
+            Saison {{album.season}}: {{album.name}} ({{album.date}})
         </p>
-        
-        <div *ngFor="let album of season.albums">
-            <p class="normal" (click)="selectAlbum(album)" *ngIf="!selectedAlbum" style="color: hotpink;">
-                    <a>{{album.date}}, {{album.name}}</a>
-            </p>
-            
-            <span *ngIf="album == selectedAlbum">
-                <p class="normal">
-                    {{album.date}}, {{album.name}}
-                </p>
 
-                <ngu-carousel *ngIf="carouselItems && !isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems" style="margin: auto; padding: 100px;">
-                    <div class="item" *nguCarouselDef="let item;">
-                        <div class="tile">
-                            <table>
-                                <tr>
-                                    <img class="bordered" height="500vh" src="{{imageBaseUrl + item.imagePath}}">
-                                </tr>
+        <ngu-carousel *ngIf="carouselItems && !isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems" style="margin: auto; padding: 100px;">
+            <div class="item" *nguCarouselDef="let item;">
+                <div class="tile">
+                    <table>
+                        <tr>
+                            <img class="bordered" height="500vh" src="{{imageBaseUrl + item.imagePath}}">
+                        </tr>
 
-                                <tr>
-                                    <p class="center">{{item.description}}</p>
-                                </tr>
-                            </table>
-                        </div> 
-                    </div>
+                        <tr>
+                            <p class="center">{{item.description}}</p>
+                        </tr>
+                    </table>
+                </div> 
+            </div>
 
-                    <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
-                    <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
-                    <ul class="myPoint" NguCarouselPoint>
-                        <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-                    </ul>
-                </ngu-carousel>
+            <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+            <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
+            <ul class="myPoint" NguCarouselPoint>
+                <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
+            </ul>
+        </ngu-carousel>
 
-                <ngu-carousel *ngIf="carouselItems && isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems">
-                    <div class="item" *nguCarouselDef="let item;">
-                        <div class="tile">
-                            <table>
-                                <tr>
-                                    <img class="bordered" width="200vw" src="{{imageBaseUrl + item.imagePath}}">
-                                </tr>
+        <ngu-carousel *ngIf="carouselItems && isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems">
+            <div class="item" *nguCarouselDef="let item;">
+                <div class="tile">
+                    <table>
+                        <tr>
+                            <img class="bordered" width="200vw" src="{{imageBaseUrl + item.imagePath}}">
+                        </tr>
 
-                                <tr>
-                                    <p class="center">{{item.description}}</p>
-                                </tr>
-                            </table>
-                        </div> 
-                    </div>
+                        <tr>
+                            <p class="center">{{item.description}}</p>
+                        </tr>
+                    </table>
+                </div> 
+            </div>
 
-                    <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
-                    <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
-                    <ul class="myPoint" NguCarouselPoint>
-                        <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-                    </ul>
-                </ngu-carousel>
+            <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+            <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
+            <ul class="myPoint" NguCarouselPoint>
+                <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
+            </ul>
+        </ngu-carousel>
 
-                
-
-                <br>
-                <button style="margin-left: 15px; font-size: 20px;" mat-button class="background-primary" (click)="backFromPhotos()">Zurück zu den Alben</button>
-            </span>
-
-        </div>
-        
         <br>
+        <button style="margin-left: 15px; font-size: 20px;" mat-button class="background-primary" (click)="backFromPhotos()">Zurück zu den Alben</button>
+    </span>
 
-        <button *ngIf="!selectedAlbum" style="margin-left: 15px; font-size: 20px" mat-button class="background-primary" (click)="backFromAlbums()">Zurück zur Übersicht</button>
-
-    </div>
 </div>
+
+<br>
 
 <br>
 <br>
