New design for socialmedia/video page

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,7 +2,7 @@
     Galerie
 </h1>
 
-<p class="normal center" *ngIf="!selectedAlbum" style="text-align: center;">
+<p class="normalCentered" *ngIf="!selectedAlbum" style="text-align: center;">
     Für unsere Fans haben wir alle HV TDP-Veranstaltungen archiviert. Viel Spaß beim Durchstöbern der offiziellen HV TDP-Galerie.
 </p>
 
