Disable position subtext for supporting players

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -46,7 +46,7 @@
             
             <img matListAvatar class='img-preview' src="{{imageBaseUrl + player.imagePath}}" alt="{{player.firstName}} {{player.lastName}}">
             <h1 style="font-size:xx-large;font-weight:bold;" matLine class='txt-preview'>{{player.firstName}} {{player.lastName | uppercase}}</h1>
-            <h1 style="font-size:x-large;" matLine class='txt-preview'>Position: {{player.position}}</h1>
+            <!-- <h1 style="font-size:x-large;" matLine class='txt-preview'>Position: {{player.position}}</h1> -->
             
             <p matLine>
               <span style="font-size:medium;">beim Verein seit: {{player.memberSinceYear}}</span>
