--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -86,3 +86,27 @@
 </p>
 
 <br>
+
+
+<p class="normal">
+  <b>Spieltermine Frühjahr 2022:</b>
+</p>
+ 
+<p class="normal">2. Runde - SAMSTAG, 30.04.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK UP Voitsberg (Nachtragstermin Herbst)</p>
+<hr>
+<p class="normal">8. Runde - SAMSTAG, 07.05.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
+<hr>
+<p class="normal">9. Runde - SAMSTAG, 14.05.2022 - 18:00 Uhr - Sparkassen Arena Voitsberg - SK UP Voitsberg vs. HV TDP Stainz</p>
+<hr>
+<p class="normal">10. Runde - FREITAG, 03.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Mein Lokal Gössnitz</p>
+<hr>
+<p class="normal">11. Runde - FREITAG, 10.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Studio A Köflach</p>
+<hr>
+<p class="normal">12. Runde - DONNERSTAG, 23.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Dorfwirt Müller</p>
+<hr>
+<p class="normal">13. Runde - SAMSTAG, 02.07.2022 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz vs. SV Geistthal</p>
+<hr>
+<p class="normal">14. Runde - FREITAG, 15.07.2022 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz</p>
+
+<br>
+<br>
