Update championship results

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,6 +72,41 @@
 <br>
 
 <p class="normal">
+  <b>Ergebnisse Herbstsaison 2021/2022:</b>
+</p>
+
+<p class="normal">
+  1. Runde - SK Hohenburg : HV TDP Stainz 0:3
+</p>
+<hr>
+<p class="normal">
+  2. Runde - HV TDP Stainz : SK UP Voitsberg 3:3
+</p>
+<hr>
+<p class="normal">
+  3. Runde - HFC Mein Lokal Gößnitz : HV TDP Stainz 1:2
+</p>
+<hr>
+<p class="normal">
+  4. Runde - HV TDP Stainz : HFC Studio A Köflach 0:3
+</p>
+<hr>
+<p class="normal">
+  5. Runde - STT Dorfwirt Müller : HV TDP Stainz 6:2
+</p>
+<hr>
+<p class="normal">
+  6. Runde - SV Geistthal : HV TDP Stainz 3:5
+</p>
+<hr>
+<p class="normal">
+  7. Runde - HV TDP Stainz : STT Pichler 2:2
+</p>
+<hr>
+
+<br>
+
+<p class="normal">
   <b>Unsere Torschützen:</b>
 </p>
 
@@ -91,9 +126,7 @@
 <p class="normal">
   <b>Spieltermine Frühjahr 2022:</b>
 </p>
- 
-<p class="normal">2. Runde - SAMSTAG, 30.04.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK UP Voitsberg (Nachtragstermin Herbst)</p>
-<hr>
+
 <p class="normal">8. Runde - SAMSTAG, 07.05.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
 <hr>
 <p class="normal">9. Runde - SAMSTAG, 14.05.2022 - 18:00 Uhr - Sparkassen Arena Voitsberg - SK UP Voitsberg vs. HV TDP Stainz</p>
