--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -71,38 +71,41 @@
 
 <br>
 
-<p class="normal">
-  <b>Ergebnisse Herbstsaison 2021/2022:</b>
+<p class="small">
+  <b>Bisherige Ergebnisse:</b>
 </p>
 
-<p class="normal">
+<p class="small">
   1. Runde - SK Hohenburg : HV TDP Stainz 0:3
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   2. Runde - HV TDP Stainz : SK UP Voitsberg 3:3
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   3. Runde - HFC Mein Lokal Gößnitz : HV TDP Stainz 1:2
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   4. Runde - HV TDP Stainz : HFC Studio A Köflach 0:3
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   5. Runde - STT Dorfwirt Müller : HV TDP Stainz 6:2
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   6. Runde - SV Geistthal : HV TDP Stainz 3:5
 </p>
-<hr>
-<p class="normal">
+
+<p class="small">
   7. Runde - HV TDP Stainz : STT Pichler 2:2
 </p>
-<hr>
+
+<p class="small">
+  9. Runde - SK UP Voitsberg vs. HV TDP Stainz 3:2
+</p>
 
 <br>
 
@@ -127,9 +130,7 @@
   <b>Spieltermine Frühjahr 2022:</b>
 </p>
 
-<p class="normal">8. Runde - SAMSTAG, 07.05.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
-<hr>
-<p class="normal">9. Runde - SAMSTAG, 14.05.2022 - 18:00 Uhr - Sparkassen Arena Voitsberg - SK UP Voitsberg vs. HV TDP Stainz</p>
+<p class="normal">8. Runde (Nachtrag) - FREITAG, 27.05.2022 - 19:30 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
 <hr>
 <p class="normal">10. Runde - FREITAG, 03.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Mein Lokal Gössnitz</p>
 <hr>
