--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -104,7 +104,15 @@
 </p>
 
 <p class="small">
+  8. Runde - HV TDP Stainz vs. SK Hohenburg 3:0
+</p>
+
+<p class="small">
   9. Runde - SK UP Voitsberg vs. HV TDP Stainz 3:2
+</p>
+
+<p class="small">
+  10. Runde - HV TDP Stainz vs. STT Mein Lokal Gössnitz 1:1
 </p>
 
 <br>
@@ -130,11 +138,7 @@
   <b>Spieltermine Frühjahr 2022:</b>
 </p>
 
-<p class="normal">8. Runde (Nachtrag) - FREITAG, 27.05.2022 - 19:30 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
-<hr>
-<p class="normal">10. Runde - FREITAG, 03.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Mein Lokal Gössnitz</p>
-<hr>
-<p class="normal">11. Runde - FREITAG, 10.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Studio A Köflach</p>
+<p class="normal">11. Runde - MONTAG, 13.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Studio A Köflach</p>
 <hr>
 <p class="normal">12. Runde - DONNERSTAG, 23.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Dorfwirt Müller</p>
 <hr>
