Update championship content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -115,6 +115,10 @@
   10. Runde - HV TDP Stainz vs. STT Mein Lokal Gössnitz 1:1
 </p>
 
+<p class="small">
+  11. Runde - HV TDP Stainz vs. HFC Studio A Köflach 1:2
+</p>
+
 <br>
 
 <p class="normal">
@@ -138,9 +142,7 @@
   <b>Spieltermine Frühjahr 2022:</b>
 </p>
 
-<p class="normal">11. Runde - MONTAG, 13.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Studio A Köflach</p>
-<hr>
-<p class="normal">12. Runde - DONNERSTAG, 23.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Dorfwirt Müller</p>
+<p class="normal">12. Runde - MITTWOCH, 22.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Dorfwirt Müller</p>
 <hr>
 <p class="normal">13. Runde - SAMSTAG, 02.07.2022 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz vs. SV Geistthal</p>
 <hr>
